I need to fix rectangles but this will be done tonight for sure really good start.

--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>Headphones</title>
 </head>
 <body>
+     <header>
+        <div class="rectangles-container">
+            <div class="rectangle-1"></div>
+            <div class="rectangle-2"></div>
+            <div class="rectangle-3"></div>
+        </div>
+        <div class="hero-content">
+            <h1 class="hero-text">Welcome to Our Website</h1>
+            <p class="hero-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="hero-description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <button class="cta-button">CALL TO ACTION</button>
+        </div>
+    </header>
 
-    <!-- Main Wrapper -->
-    <main>
+    <!-- Other Sections (what we do, results, contact, etc.) -->
+    <section id="what-we-do">
+        <h2>What We Do...</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    </section>
 
-        <!-- Header / Hero Section -->
-        <header>
-            <h1>Experience the Best Sound</h1>
-        </header>
+    <section id="our-results">
+        <h2>Our Results</h2>
+        <p>Our headphones have been rated the best by thousands of customers.</p>
+    </section>
 
-        <!-- What We Do Section -->
-        <section id="what-we-do">
-            <h2>What We Do</h2>
-            <p>We provide high-quality headphones that deliver exceptional sound quality.</p>
-        </section>
-
-        <!-- Our Results Section -->
-        <section id="our-results">
-            <h2>Our Results</h2>
-            <p>Our headphones have been rated the best by thousands of customers.</p>
-        </section>
-
-        <!-- Contact Form Section -->
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <form>
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-
-    </main>
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
 
     <!-- Footer -->
     <footer>
