got part 3 pentagons setup

--- a/index.html
+++ b/index.html
@@ -48,11 +48,35 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
 
-    <section id="part3">
-        <h2>Our results speak for themselves</h2>
-        <p>Our results speak for themselves
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </section>
+   <section id="part3" style="background-image: url('images/headphones_hero_2.jpg'); background-size: cover; background-position: center; color: white;">
+    <h2 style="color: white;">Our results speak for themselves</h2>
+    <p style="color: white;">Our results speak for themselves
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    
+    <div class="pentagon-container">
+        <div class="pentagon">
+            <span class="percent">+2%</span>
+            <span class="label">Lorem ipsum dolor</span>
+        </div>
+        <div class="pentagon">
+            <span class="percent">+2%</span>
+            <span class="label">Lorem ipsum dolor</span>
+        </div>
+        <div class="pentagon">
+            <span class="percent">+2%</span>
+            <span class="label">Lorem ipsum dolor</span>
+        </div>
+        <div class="pentagon">
+            <span class="percent">+2%</span>
+            <span class="label">Lorem ipsum dolor</span>
+        </div>
+        <div class="pentagon">
+            <span class="percent">+2%</span>
+            <span class="label">Lorem ipsum dolor</span>
+        </div>
+    </div>
+</section>
+
 
     <section id="contact">
         <h2>Contact Us</h2>
