fixed button added logo at top but needs to be aligned with rectangles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
      <header>
+        <div class="header-content">
+        <img src="images/logo_headphones.png" alt="Logo" class="logo">
         <div class="rectangles-container">
             <div class="rectangle-1"></div>
             <div class="rectangle-2"></div>
