all thats left now is a bunch of shape making for icons in footer and section 2 of the site.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     </div>
 </section>
 
-
     <section id="contact">
         <h2>Contact Us</h2>
         <form>
@@ -92,9 +91,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Headphones Inc. All Rights Reserved.</p>
-    </footer>
-
+    <img src="images/logo_headphones.png" alt="Logo" class="logo">
+    <p>&copy; headphones 2020</p>
+</footer>
 </body>
 </html>
->>>>>>> branchbreaker
