--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/icon.css">
+    <link rel="stylesheet" href="css/sass.css">
+    <link rel="stylesheet" href="css/variables.css">
     <title>Headphones</title>
 </head>
 <body>
