--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/icon.css">
-    <link rel="stylesheet" href="css/sass.css">
-    <link rel="stylesheet" href="css/variables.css">
     <title>Headphones</title>
 </head>
 <body>
@@ -95,6 +92,11 @@
     <!-- Footer -->
     <footer>
     <img src="images/logo_headphones.png" alt="Logo" class="logo">
+    <div class="social-icons">
+        <i class="holberton_school-icon-ic_facebook"></i>
+        <i class="holberton_school-icon-ic_instagram"></i>
+        <i class="holberton_school-icon-ic_twitter"></i>
+    </div>
     <p>&copy; headphones 2020</p>
 </footer>
 </body>
