fonts for what we do addeed.

--- a/index.html
+++ b/index.html
@@ -31,21 +31,25 @@
     </section>
 
     <section id="soundwave">
+        <i class="holberton_school-icon-ic_sound"></i>
         <h2>Lorem ipsum</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
 
     <section id="video">
+        <i class="holberton_school-icon-ic_video"></i>
         <h2>Lorem ipsum</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
 
     <section id="music">
+        <i class="holberton_school-icon-ic_music"></i>
         <h2>Lorem ipsum</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
 
     <section id="hearing">
+        <i class="holberton_school-icon-ic_hearing"></i>
         <h2>Lorem ipsum</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
