--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
     <title>Headphones</title>
 </head>
 <body>
-     <header>
+    <header>
         <div class="header-content">
-        <img src="images/logo_headphones.png" alt="Logo" class="logo">
-        <div class="rectangles-container">
-            <div class="rectangle-1"></div>
-            <div class="rectangle-2"></div>
-            <div class="rectangle-3"></div>
+            <img src="images/logo_headphones.png" alt="Logo" class="logo">
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#what-we-do">what we do</a></li>
+                    <li><a href="#results">our results</a></li>
+                    <li><a href="#contact">contact us</a></li>
+                </ul>
+            </nav>
+            <div class="hamburger-menu" id="hamburger-menu">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
+    </div>
+        </div>
+        <!-- Hero content placed outside of the header content container -->
         <div class="hero-content">
             <h1 class="hero-text">Lorem ipsum dolor set amet lorem ipsum</h1>
             <p class="hero-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-             <button class="cta-button">CALL TO ACTION</button>
+            <button class="cta-button">CALL TO ACTION</button>
             <p class="hero-description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
     </header>
@@ -54,7 +64,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </section>
 
-   <section id="part3" style="background-image: url('images/headphones_hero_2.jpg'); background-size: cover; background-position: center; color: white;">
+   <section id="results" style="background-image: url('images/headphones_hero_2.jpg'); background-size: cover; background-position: center; color: white;">
     <h2 style="color: white;">Our results speak for themselves</h2>
     <p style="color: white;">Our results speak for themselves
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
